[package]
keywords = ["gui", "layout", "yoga", "jss", "parsing", "rise-ui"]
authors = ["Anton Shramko <antonshramko@yandex.ru>"]
repository = "https://github.com/rise-ui/jss-rs"
homepage = "https://github.com/rise-ui/jss-rs"
description = "Rust implementation of JSS"
categories = ["gui"]
readme = "README.md"
version = "0.1.0"
license = "MIT"
name = "jss"

[features]
default = []

[dependencies]
webrender = { git = "https://github.com/servo/webrender", ref = "9156a4465f6ad715a0206cdd9a7e9a6f0385fbd6" }
yoga = { git = "https://github.com/rise-ui/yoga-rs", branch = "enum-case", features = ["serde_support"] }
jss_derive = { git = "https://github.com/rise-ui/jss_derive", version = "0.1.0" }
eval = { git = "https://github.com/friktor/eval", branch = "ordering-n-serde" }
serde_derive = { version = "=1.0.66", features = ["deserialize_in_place"] }
euclid = { version = "0.19.0", features = ["serde"] }
serde = { version = "=1.0.66", features = ["rc"] }
css-color-parser = "0.1.2"
failure_derive = "0.1.2"
interpolation = "0.1.0"
ordered-float = "0.5.0"
enum_extract = "0.1.1"
lazy_static = "1.1.0"
serde_json = "1.0.26"
erased-serde = "0.3"
Inflector = "0.11.3"
serde_yaml = "0.8"
yaml-rust = "0.4"
failure = "0.1.2"
maplit = "1.0.1"
regex = "1.0.2"
nom = "4.0.0"

# jss_derive = { path = "../jss_derive", version = "0.1.0" }

[dev-dependencies]
rand = "0.5.5"