[package]
keywords = ["gui", "layout", "yoga", "jss", "parsing", "rise-ui"]
authors = ["Anton Shramko <antonshramko@yandex.ru>"]
repository = "https://github.com/rise-ui/jss-rs"
homepage = "https://github.com/rise-ui/jss-rs"
description = "Rust implementation of JSS"
categories = ["gui"]
readme = "README.md"
version = "0.1.1"
license = "MIT"
name = "jss"

[features]
default = []

[dependencies]
webrender = { git = "https://github.com/servo/webrender", ref = "34d58890821d2e606285f21cd6f4befd46c83d47" }
yoga = { git = "https://github.com/rise-ui/yoga-rs", branch = "enum-case", features = ["serde_support"] }
jss_derive = { git = "https://github.com/rise-ui/jss_derive", version = "0.1.1" }
eval = { git = "https://github.com/friktor/eval", branch = "ordering-n-serde" }
serde_derive = { version = "=1.0.80", features = ["deserialize_in_place"] }
euclid = { version = "0.19.0", features = ["serde"] }
serde = { version = "=1.0.80", features = ["rc"] }
css-color-parser = "0.1.2"
failure_derive = "0.1.2"
interpolation = "0.1.0"
ordered-float = "0.5.0"
enum_extract = "0.1.1"
lazy_static = "1.1.0"
serde_json = "1.0.26"
erased-serde = "0.3"
Inflector = "0.11.3"
serde_yaml = "0.8"
yaml-rust = "0.4"
failure = "0.1.2"
maplit = "1.0.1"
palette = "0.4"
regex = "1.0.2"
nom = "4.0.0"

# jss_derive = { path = "../jss_derive", version = "0.1.1" }

[dev-dependencies]
rand = "0.5.5"