[package]
keywords = ["gui", "layout", "yoga", "jss", "parsing", "rise-ui"]
authors = ["Anton Shramko <antonshramko@yandex.ru>"]
repository = "https://github.com/rise-ui/jss-rs"
homepage = "https://github.com/rise-ui/jss-rs"
description = "Rust implementation of JSS"
categories = ["gui"]
readme = "README.md"
version = "0.1.1"
license = "MIT"
name = "jss"

[features]
default = []

[dependencies]
webrender = { git = "https://github.com/servo/webrender", ref = "aabfa75ced1c2ee37d548b87cc6a8c6095a51b8d" }
yoga = { git = "https://github.com/rise-ui/yoga-rs", branch = "enum-case", features = ["serde_support"] }
jss_derive = { git = "https://github.com/rise-ui/jss_derive", version = "0.1.1" }
eval = { git = "https://github.com/friktor/eval", branch = "ordering-n-serde" }
serde_derive = { version = "=1.0.80", features = ["deserialize_in_place"] }
hashbrown = { version = "0.1.8", features = ["serde"] }
euclid = { version = "0.19.5", features = ["serde"] }
serde = { version = "=1.0.80", features = ["rc"] }
css-color-parser = "0.1.2"
failure_derive = "0.1.5"
interpolation = "0.2.0"
ordered-float = "1.0.1"
enum_extract = "0.1.1"
lazy_static = "1.2.0"
serde_json = "1.0.36"
erased-serde = "0.3.6"
Inflector = "0.11.3"
serde_yaml = "0.8.8"
yaml-rust = "0.4.2"
failure = "0.1.5"
maplit = "1.0.1"
palette = "0.4.1"
regex = "1.1.0"
nom = "4.1.1"

# jss_derive = { path = "../jss_derive", version = "0.1.1" }

[dev-dependencies]
rand = "0.6.4"
